--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
                 <artifactId>valintaperusteet-api</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>fi.vm.sade.haku</groupId>
+                <artifactId>hakemus-api</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
 
 
 
