--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,10 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.camel</groupId>
+                <artifactId>camel-servlet</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.camel</groupId>
                 <artifactId>camel-spring</artifactId>
                 <exclusions>
                     <exclusion>
