--- a/pom.xml
+++ b/pom.xml
@@ -35,13 +35,6 @@
                 <version>1.0-SNAPSHOT</version>
             </dependency>
 
-
-
-
-
-
-
-
             <dependency>
                 <groupId>org.apache.cxf</groupId>
                 <artifactId>cxf-rt-core</artifactId>
@@ -264,6 +257,12 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-simple</artifactId>
+            </dependency>
+            <dependency>
+            	<groupId>cglib</groupId>
+            	<artifactId>cglib</artifactId>
+            	<version>2.2.2</version>
+            	<scope>provided</scope>
             </dependency>
         </dependencies>
 
