--- a/src/main/resources/META-INF/wsdlSource.properties
+++ b/src/main/resources/META-INF/wsdlSource.properties
@@ -1,4 +1,4 @@
 
 ValintaperusteService.url=
-HakemusService.url=
+HakemusService.url=http://test-oppija.oph.ware.fi/services/ws/hakemusService
 ValintalaskentaService.url=
