illan viimeiset korjaukset projektiin

--- a/src/main/resources/META-INF/wsdlSource.properties
+++ b/src/main/resources/META-INF/wsdlSource.properties
@@ -1,4 +1,3 @@
-
-ValintaperusteService.url=
+ValintaperusteService.url=http://localhost:8080/valintaperusteet-service/services/ws/valintaperusteService
 HakemusService.url=http://test-oppija.oph.ware.fi/services/ws/hakemusService
-ValintalaskentaService.url=
+ValintalaskentaService.url=http://localhost:8080/valintalaskenta-service/services/ws/valintalaskentaService
