--- a/src/main/resources/META-INF/wsdlSource.properties
+++ b/src/main/resources/META-INF/wsdlSource.properties
@@ -1,3 +1,4 @@
 ValintaperusteService.url=http://localhost:8080/valintaperusteet-service/services/ws/valintaperusteService
 HakemusService.url=http://test-oppija.oph.ware.fi/services/ws/hakemusService
 ValintalaskentaService.url=http://localhost:8080/valintalaskenta-laskenta-service/services/ws/valintalaskentaService
+TarjontaService.url=http://localhost:8080/tarjonta-service/services/ws/tarjontaService
