--- a/src/main/resources/META-INF/wsdlSource.properties
+++ b/src/main/resources/META-INF/wsdlSource.properties
@@ -1,4 +1,5 @@
 ValintaperusteService.url=http://localhost:8080/valintaperusteet-service/services/ws/valintaperusteService
-HakemusService.url=http://test-oppija.oph.ware.fi/services/ws/hakemusService
+#HakemusService.url=http://test-oppija.oph.ware.fi/services/ws/hakemusService
+HakemusService.url=http://localhost:8282/services/ws/hakemusService
 ValintalaskentaService.url=http://localhost:8080/valintalaskenta-laskenta-service/services/ws/valintalaskentaService
 TarjontaService.url=http://localhost:8080/tarjonta-service/services/ws/tarjontaService
