testin properties etuliitteet lisätty

--- a/src/test/resources/tarjonta-ajastin.properties
+++ b/src/test/resources/tarjonta-ajastin.properties
@@ -1,2 +1,2 @@
-tarjonta.ajastinReitti.aktivoi=true
-tarjonta.ajastinReitti.cron=*/1+*+*+?+*+*
+valintalaskentakoostepalvelu.tarjonta.ajastinReitti.aktivoi=true
+valintalaskentakoostepalvelu.tarjonta.ajastinReitti.cron=*/1+*+*+?+*+*
