--- a/src/main/resources/META-INF/wsdlSource.properties
+++ b/src/main/resources/META-INF/wsdlSource.properties
@@ -1,5 +1,6 @@
-ValintaperusteService.url=http://localhost:8080/valintaperusteet-service/services/ws/valintaperusteService
-#HakemusService.url=http://test-oppija.oph.ware.fi/services/ws/hakemusService
-HakemusService.url=http://localhost:8282/services/ws/hakemusService
-ValintalaskentaService.url=http://localhost:8080/valintalaskenta-laskenta-service/services/ws/valintalaskentaService
-TarjontaService.url=http://localhost:8080/tarjonta-service/services/ws/tarjontaService
+valintalaskentakoostepalvelu.tarjonta.ajastinReitti.aktivoi=false
+valintalaskentakoostepalvelu.tarjonta.ajastinReitti.cron=*/1+*+*+?+*+*
+valintalaskentakoostepalvelu.valintaperusteService.url=http://localhost:8080/valintaperusteet-service/services/ws/valintaperusteService
+valintalaskentakoostepalvelu.hakemusService.url=http://localhost:8282/services/ws/hakemusService
+valintalaskentakoostepalvelu.valintalaskentaService.url=http://localhost:8080/valintalaskenta-laskenta-service/services/ws/valintalaskentaService
+valintalaskentakoostepalvelu.tarjontaService.url=http://localhost:8080/tarjonta-service/services/ws/tarjontaService
