--- a/src/main/resources/META-INF/wsdlSource.properties
+++ b/src/main/resources/META-INF/wsdlSource.properties
@@ -3,4 +3,4 @@ valintalaskentakoostepalvelu.tarjonta.ajastinReitti.cron=*/1+*+*+?+*+*
 valintalaskentakoostepalvelu.valintaperusteService.url=http://localhost:8080/valintaperusteet-service/services/ws/valintaperusteService
 valintalaskentakoostepalvelu.hakemusService.url=http://localhost:8282/services/ws/hakemusService
 valintalaskentakoostepalvelu.valintalaskentaService.url=http://localhost:8080/valintalaskenta-laskenta-service/services/ws/valintalaskentaService
-valintalaskentakoostepalvelu.tarjontaService.url=http://localhost:8080/tarjonta-service/services/ws/tarjontaService
+valintalaskentakoostepalvelu.tarjontaService.url=http://su localhost:8080/tarjonta-service/services/ws/tarjontaService
