Sijoittelun muutokset koostepalveluun.

--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,21 @@
 			<artifactId>valintaperusteet-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>fi.vm.sade.valintaperusteet</groupId>
+            <artifactId>valintalaskenta-tulos-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>fi.vm.sade.sijoittelu</groupId>
+            <artifactId>sijoittelu-algoritmi-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
-		<!-- SADE -->
+
+
+
+        <!-- SADE -->
 		<dependency>
 			<groupId>fi.vm.sade.haku</groupId>
 			<artifactId>hakemus-api</artifactId>
