valintalaskentakoostepalvelu tarjonta rest url

--- a/src/main/resources/META-INF/valintalaskentakoostepalvelu.properties
+++ b/src/main/resources/META-INF/valintalaskentakoostepalvelu.properties
@@ -8,3 +8,5 @@ valintalaskentakoostepalvelu.sijoitteluService.url=http://localhost:8180/sijoitt
 valintalaskentakoostepalvelu.tarjontaService.url=http://luokka.hard.ware.fi:8302/tarjonta-service/services/tarjontaPublicService
 valintalaskentakoostepalvelu.hakemusService.url=http://luokka.hard.ware.fi:8306/haku-app/services/ws/hakemusService
 valintalaskentakoostepalvelu.koodiService.url=http://luokka.hard.ware.fi:8303/koodisto-service/services/koodiService
+
+valintalaskentakoostepalvelu.tarjonta.rest.url=http://luokka.hard.ware.fi:8302/tarjonta-service/rest
