VT-384 : valintalaskentakoostepalveluun reitti hyväksymis- ja jälkiohjauskirjeiden hakemiseen

--- a/src/main/resources/META-INF/valintalaskentakoostepalvelu.properties
+++ b/src/main/resources/META-INF/valintalaskentakoostepalvelu.properties
@@ -4,6 +4,7 @@ valintalaskentakoostepalvelu.valintaperusteService.url=http://localhost:8180/val
 valintalaskentakoostepalvelu.valintalaskentaService.url=http://localhost:8180/valintalaskenta-laskenta-service/services/valintalaskentaService
 valintalaskentakoostepalvelu.valintaTulosService.url=http://localhost:8180/valintalaskenta-laskenta-service/services/valintatietoService
 valintalaskentakoostepalvelu.sijoitteluService.url=http://localhost:8180/sijoittelu-service/services/sijoitteluService
+valintalaskentakoostepalvelu.viestintapalvelu.url=http://luokka.hard.ware.fi:8311/viestintapalvelu
 
 valintalaskentakoostepalvelu.tarjontaService.url=http://luokka.hard.ware.fi:8302/tarjonta-service/services/tarjontaPublicService
 valintalaskentakoostepalvelu.hakemusService.url=http://luokka.hard.ware.fi:8306/haku-app/services/ws/hakemusService
