--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>fi.vm.sade.valintaperusteet</groupId>
         <artifactId>valintaperusteet</artifactId>
-        <version>5.1-SNAPSHOT</version>
+        <version>5.1</version>
         <relativePath>..</relativePath>
     </parent>
 
