VT-384 Osoitetarrojen tulostus : Tekee hakemuksen datalle ISO8859-1 -> UTF-8 muunnoksen koska hakemuksen data on toistaiseksi tallennettu ISO8859-1 muodossa. Korjauspyyntö jätetty team4:lle

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
         </dependency>
         <!-- Internal -->
         <dependency>
+			<groupId>fi.vm.sade.valintaperusteet</groupId>
+			<artifactId>valintalaskenta-tulos-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+        <dependency>
             <groupId>fi.vm.sade.valintaperusteet</groupId>
             <artifactId>valintalaskenta-laskenta-api</artifactId>
             <version>${project.version}</version>
