--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,9 +27,15 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+	
+	
 	<servlet>
         <servlet-name>Jersey REST Service</servlet-name>
         <servlet-class>com.sun.jersey.spi.spring.container.servlet.SpringServlet</servlet-class>
+        <init-param>
+	       <param-name>com.sun.jersey.spi.container.ContainerResponseFilters</param-name>
+	       <param-value>fi.vm.sade.valinta.kooste.filter.CORSFilter</param-value>
+	    </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
@@ -37,26 +43,12 @@
         <url-pattern>/resources/*</url-pattern>
     </servlet-mapping>
     
+    
+	
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
 
-	<!--
-    <servlet>
-        <servlet-name>CXFServlet</servlet-name>
-        <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-        
-        If you want to leverage the Servlet3's async feature in Tomcat,
-        please enable this feature
-        <async-supported>true</async-supported>
-        
-    </servlet>
-	 
-    <servlet-mapping>
-        <servlet-name>CXFServlet</servlet-name>
-        <url-pattern>/*</url-pattern>
-    </servlet-mapping>
-    -->
+	
     
 </web-app>
