--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,9 +33,9 @@
         <servlet-name>Jersey REST Service</servlet-name>
         <servlet-class>com.sun.jersey.spi.spring.container.servlet.SpringServlet</servlet-class>
         <init-param>
-	       <param-name>com.sun.jersey.spi.container.ContainerResponseFilters</param-name>
-	       <param-value>fi.vm.sade.valinta.kooste.filter.CORSFilter</param-value>
-	    </init-param>
+            <param-name>com.sun.jersey.spi.container.ContainerResponseFilters</param-name>
+            <param-value>fi.vm.sade.generic.rest.CorsFilter</param-value>
+        </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
