Muutettu valintakoelaskenta käyttämään suoraan camelia.

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,1 +1,15 @@
-#placeholder
+valintalaskentakoostepalvelu.tarjonta.ajastinReitti.aktivoi=
+valintalaskentakoostepalvelu.tarjonta.ajastinReitti.cron=
+valintalaskentakoostepalvelu.valintaperusteService.url=
+valintalaskentakoostepalvelu.valintalaskentaService.url=
+valintalaskentakoostepalvelu.valintaTulosService.url=
+valintalaskentakoostepalvelu.sijoitteluService.url=
+valintalaskentakoostepalvelu.viestintapalvelu.url=
+
+valintalaskentakoostepalvelu.tarjontaService.url=
+valintalaskentakoostepalvelu.hakemusService.url=
+valintalaskentakoostepalvelu.koodiService.url=
+
+valintalaskentakoostepalvelu.tarjonta.rest.url=
+valintalaskentakoostepalvelu.hakemus.all.rest.url=
+valintalaskentakoostepalvelu.hakemus.single.rest.url=
