--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,15 @@
     </build>
 
     <dependencies>
+		<!--
+		XML Kalenteri ei toimi ilman! 
+		
+    	<dependency>
+    		<groupId>com.sun.org.apache</groupId>
+    		<artifactId>jaxp-ri</artifactId>
+    		<version>1.4</version>
+    	</dependency>
+    	 -->
     	<dependency>
     		<groupId>commons-io</groupId>
     		<artifactId>commons-io</artifactId>
