--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -11,5 +11,4 @@ valintalaskentakoostepalvelu.hakemusService.url=
 valintalaskentakoostepalvelu.koodiService.url=
 
 valintalaskentakoostepalvelu.tarjonta.rest.url=
-valintalaskentakoostepalvelu.hakemus.all.rest.url=
-valintalaskentakoostepalvelu.hakemus.single.rest.url=
+valintalaskentakoostepalvelu.hakemus.rest.url=
