--- a/src/test/resources/valintakoelaskenta-test.properties
+++ b/src/test/resources/valintakoelaskenta-test.properties
@@ -1,1 +1,1 @@
-valintalaskentakoostepalvelu.hakemus.all.rest.url=http://localhost:8097
+valintalaskentakoostepalvelu.hakemus.rest.url=http://localhost:8097
