--- a/src/main/resources/META-INF/valintalaskentakoostepalvelu.properties
+++ b/src/main/resources/META-INF/valintalaskentakoostepalvelu.properties
@@ -11,5 +11,4 @@ valintalaskentakoostepalvelu.hakemusService.url=http://luokka.hard.ware.fi:8306/
 valintalaskentakoostepalvelu.koodiService.url=http://luokka.hard.ware.fi:8303/koodisto-service/services/koodiService
 
 valintalaskentakoostepalvelu.tarjonta.rest.url=http://luokka.hard.ware.fi:8302/tarjonta-service/rest
-valintalaskentakoostepalvelu.hakemus.all.rest.url=http://luokka.hard.ware.fi:8306/haku-app/applications
-valintalaskentakoostepalvelu.hakemus.single.rest.url=http://luokka.hard.ware.fi:8306/haku-app/applications/%1$s
+valintalaskentakoostepalvelu.hakemus.rest.url=http://luokka.hard.ware.fi:8306/haku-app/applications
