Refaktoroitu koostepalvelu käyttämään hakemus-apin rest-rajapintaa. Siivousta.

--- a/src/main/resources/META-INF/valintalaskentakoostepalvelu.properties
+++ b/src/main/resources/META-INF/valintalaskentakoostepalvelu.properties
@@ -11,4 +11,4 @@ valintalaskentakoostepalvelu.hakemusService.url=http://luokka.hard.ware.fi:8306/
 valintalaskentakoostepalvelu.koodiService.url=http://luokka.hard.ware.fi:8303/koodisto-service/services/koodiService
 
 valintalaskentakoostepalvelu.tarjonta.rest.url=http://luokka.hard.ware.fi:8302/tarjonta-service/rest
-valintalaskentakoostepalvelu.hakemus.rest.url=http://luokka.hard.ware.fi:8306/haku-app
+valintalaskentakoostepalvelu.hakemus.rest.url=https://itest-virkailija.oph.ware.fi/haku-app
