alustava hyväksymiskirje -- palvelin puolen dataa vailla valmis

--- a/src/main/resources/META-INF/valintalaskentakoostepalvelu.properties
+++ b/src/main/resources/META-INF/valintalaskentakoostepalvelu.properties
@@ -12,3 +12,4 @@ valintalaskentakoostepalvelu.koodiService.url=http://luokka.hard.ware.fi:8303/ko
 
 valintalaskentakoostepalvelu.tarjonta.rest.url=http://luokka.hard.ware.fi:8302/tarjonta-service/rest
 valintalaskentakoostepalvelu.hakemus.rest.url=https://itest-virkailija.oph.ware.fi/haku-app
+valintalaskentakoostepalvelu.sijoittelu.rest.url=http://localhost:8180/sijoittelu-service/resources/
