--- a/src/main/resources/META-INF/valintalaskentakoostepalvelu.properties
+++ b/src/main/resources/META-INF/valintalaskentakoostepalvelu.properties
@@ -13,3 +13,4 @@ valintalaskentakoostepalvelu.koodiService.url=http://luokka.hard.ware.fi:8303/ko
 valintalaskentakoostepalvelu.tarjonta.rest.url=http://luokka.hard.ware.fi:8302/tarjonta-service/rest
 valintalaskentakoostepalvelu.hakemus.rest.url=https://itest-virkailija.oph.ware.fi/haku-app
 valintalaskentakoostepalvelu.sijoittelu.rest.url=http://localhost:8180/sijoittelu-service/resources
+valintalaskentakoostepalvelu.valintalaskenta.rest.url=http://localhost:8180/valintalaskenta-laskenta-service/resources/hakukohde
