--- a/src/main/resources/META-INF/valintalaskentakoostepalvelu.properties
+++ b/src/main/resources/META-INF/valintalaskentakoostepalvelu.properties
@@ -5,6 +5,7 @@ valintalaskentakoostepalvelu.valintalaskentaService.url=http://localhost:8180/va
 valintalaskentakoostepalvelu.valintaTulosService.url=http://localhost:8180/valintalaskenta-laskenta-service/services/valintatietoService
 valintalaskentakoostepalvelu.sijoitteluService.url=http://localhost:8180/sijoittelu-service/services/sijoitteluService
 valintalaskentakoostepalvelu.viestintapalvelu.url=http://luokka.hard.ware.fi:8311/viestintapalvelu
+valintalaskentakoostepalvelu.hakemusService.url=
 
 valintalaskentakoostepalvelu.tarjontaService.url=http://luokka.hard.ware.fi:8302/tarjonta-service/services/tarjontaPublicService
 valintalaskentakoostepalvelu.koodiService.url=http://luokka.hard.ware.fi:8303/koodisto-service/services/koodiService
