--- a/src/main/resources/META-INF/hakuparametrit.properties
+++ b/src/main/resources/META-INF/hakuparametrit.properties
@@ -2,24 +2,26 @@
 
 # Hakuaika
 # 25.9.2013
-haku.alkupvm=1380067200
+haku.alkupvm=2013-09-25 00:00:00
 # 4.10.2013
-haku.loppupvm=1380931199
+haku.loppupvm=2013-10-04 00:00:00
 # 11.10.2013
-valintakoekutsut.alkupvm=1381467600
+#valintakoekutsut.alkupvm=1381467600
 # 16.10.2013
-valintakoekutsut.loppupvm=1381899600
+#valintakoekutsut.loppupvm=1381899600
 # 16.10.2013
-valintakoekutsutkouluille.pvm=1381899600
+#valintakoekutsutkouluille.pvm=1381899600
 # 22.10.2013
-valintakoe.alkupvm=1382400000
+#valintakoe.alkupvm=1382400000
 # 5.11.2013
-valintakoe.loppupvm=1383695999
+#valintakoe.loppupvm=1383695999
 # 7.11.2013
-koetulokset.pvm=1383868799
+koetulokset.alkupvm=2013-10-22 00:00:00
+
+koetulokset.loppupvm=2013-11-07 00:00:00
 # 8.11.2013
-valintajasijoittelu.alkupvm=1383868800
+#valintajasijoittelu.alkupvm=1383868800
 # 13.11.2013
-valintajasijoittelu.loppupvm=1384387199
+#valintajasijoittelu.loppupvm=1384387199
 # 14.11.2013
-valintaesitys.pvm=1384387200
+valintaesitys.pvm=2013-11-14 00:00:00
