--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,11 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
+            <artifactId>camel-jmx</artifactId>
+            <version>${camel.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
             <artifactId>camel-quartz</artifactId>
             <version>${camel.version}</version>
         </dependency>
@@ -463,7 +468,7 @@
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-gson</artifactId>
-            <version>2.10.0</version>
+            <version>${camel.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
