--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,11 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
+            <artifactId>camel-ftp</artifactId>
+            <version>${camel.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
             <artifactId>camel-servlet</artifactId>
             <version>${camel.version}</version>
         </dependency>
@@ -464,7 +469,11 @@
             <version>2.2.2</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+        	<groupId>commons-io</groupId>
+        	<artifactId>commons-io</artifactId>
+        	<version>2.4</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-gson</artifactId>
