--- a/src/main/resources/META-INF/valintalaskentakoostepalvelu.properties
+++ b/src/main/resources/META-INF/valintalaskentakoostepalvelu.properties
@@ -11,6 +11,7 @@ valintalaskentakoostepalvelu.tarjontaService.url=http://luokka.hard.ware.fi:8302
 valintalaskentakoostepalvelu.koodiService.url=http://luokka.hard.ware.fi:8303/koodisto-service/services/koodiService
 
 valintalaskentakoostepalvelu.tarjonta.rest.url=http://luokka.hard.ware.fi:8302/tarjonta-service/rest
+valintalaskentakoostepalvelu.organisaatioService.rest.url=http://luokka.hard.ware.fi:8302/organisaatio-service/rest
 valintalaskentakoostepalvelu.hakemus.rest.url=https://itest-virkailija.oph.ware.fi/haku-app
 valintalaskentakoostepalvelu.sijoittelu.rest.url=http://localhost:8180/sijoittelu-service/resources
 valintalaskentakoostepalvelu.valintalaskenta.rest.url=http://localhost:8180/valintalaskenta-laskenta-service/resources
