--- a/src/main/resources/META-INF/kela.properties
+++ b/src/main/resources/META-INF/kela.properties
@@ -4,4 +4,4 @@ kela.ftp.password=dOm3WREq
 kela.ftp.host=ftp1.kela.fi
 kela.ftp.port=21
 kela.ftp.protocol=ftps
-kela.ftp.path=/OPH/OPHSIIRROT/inbox
+kela.ftp.path=/OPHSIIRROT/inbox
