--- a/pom.xml
+++ b/pom.xml
@@ -23,15 +23,23 @@
     </build>
 
     <dependencies>
-        <!--
-        XML Kalenteri ei toimi ilman!
-
         <dependency>
-            <groupId>com.sun.org.apache</groupId>
-            <artifactId>jaxp-ri</artifactId>
-            <version>1.4</version>
+            	<groupId>com.google.code.morphia</groupId>
+            	<artifactId>morphia</artifactId>
+            	<version>0.102</version>
         </dependency>
-         -->
+		<dependency>
+	    		<groupId>org.mongodb</groupId>
+	    		<artifactId>mongo-java-driver</artifactId>
+	    		<version>2.11.2</version>
+	    	</dependency>
+	    <dependency>
+            <groupId>de.flapdoodle.embed</groupId>
+            <artifactId>de.flapdoodle.embed.mongo</artifactId>
+            <version>1.26</version>
+            <scope>test</scope>
+        </dependency>
+        
          <dependency>
             <groupId>fi.vm.sade.organisaatio</groupId>
             <artifactId>organisaatio-api</artifactId>
