--- a/pom.xml
+++ b/pom.xml
@@ -17,29 +17,21 @@
         <relativePath>..</relativePath>
     </parent>
 
+	<properties>
+		<jersey.version>1.17.1</jersey.version>
+		<jackson.version>1.9.13</jackson.version>
+	</properties>
 
     <build>
         <finalName>${project.artifactId}</finalName>
     </build>
 
     <dependencies>
-        <dependency>
-            	<groupId>com.google.code.morphia</groupId>
-            	<artifactId>morphia</artifactId>
-            	<version>0.102</version>
-        </dependency>
-		<dependency>
-	    		<groupId>org.mongodb</groupId>
-	    		<artifactId>mongo-java-driver</artifactId>
-	    		<version>2.11.2</version>
-	    	</dependency>
-	    <dependency>
-            <groupId>de.flapdoodle.embed</groupId>
-            <artifactId>de.flapdoodle.embed.mongo</artifactId>
-            <version>1.26</version>
-            <scope>test</scope>
-        </dependency>
-        
+    	<dependency>
+			<groupId>fi.vm.sade.dokumenttipalvelu</groupId>
+			<artifactId>dokumenttipalvelu-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
          <dependency>
             <groupId>fi.vm.sade.organisaatio</groupId>
             <artifactId>organisaatio-api</artifactId>
@@ -117,77 +109,27 @@
             <groupId>fi.vm.sade.koodisto</groupId>
             <artifactId>koodisto-api</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>com.sun.jersey.contribs</groupId>
-            <artifactId>jersey-spring</artifactId>
-            <version>1.9.1</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring-core</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring-web</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring-beans</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring-context</artifactId>
-                </exclusion>
-            </exclusions>
+		
+		<dependency>
+        	<groupId>org.glassfish.jersey.media</groupId>
+        	<artifactId>jersey-media-multipart</artifactId>
+        	<version>2.4.1</version>
         </dependency>
         <dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-json</artifactId>
-            <version>1.9.1</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.codehaus.jackson</groupId>
-                    <artifactId>jackson-core-asl</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.codehaus.jackson</groupId>
-                    <artifactId>jackson-jaxrs</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.codehaus.jackson</groupId>
-                    <artifactId>jackson-mapper-asl</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.codehaus.jackson</groupId>
-                    <artifactId>jackson-xc</artifactId>
-                </exclusion>
-            </exclusions>
+        	<groupId>org.glassfish.jersey.media</groupId>
+        	<artifactId>jersey-media-json-jackson</artifactId>
+        	<version>2.4.1</version>
         </dependency>
         <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-core-asl</artifactId>
-            <version>1.9.11</version>
-        </dependency>
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-jaxrs</artifactId>
-            <version>1.9.11</version>
-        </dependency>
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
-            <version>1.9.11</version>
-        </dependency>
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-xc</artifactId>
-            <version>1.9.11</version>
-        </dependency>
+		    <groupId>org.glassfish.jersey.ext</groupId>
+		    <artifactId>jersey-spring3</artifactId>
+		    <version>2.4.1</version>
+		</dependency>
+		<dependency>
+	        <groupId>org.glassfish.jersey.ext</groupId>
+	        <artifactId>jersey-proxy-client</artifactId>
+	        <version>2.4.1</version>
+	    </dependency>
 
 
         <dependency>
